# episode-id-map

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/init/: 001_schema.sql
docs/apis/: README.md  anidb.md  jikan.md  simkl.md  tmdb.md  tvdb.md
src/episode_id_map/: __init__.py  __main__.py  cli.py  client.py  config.py  db.py  ingest.py  logging.py  models.py  ratelimit.py
src/episode_id_map/mapping/: __init__.py  align.py  anchor.py  cluster.py
src/episode_id_map/sources/: __init__.py  anidb.py  jikan.py  limiters.py  simkl.py  tmdb.py  tvdb.py
src/episode_id_map/templates/: base.html  episodes.html  index.html
src/episode_id_map/templates/partials/: episodes_table.html  ingest_result.html  row.html  series_list.html
src/episode_id_map/web/: __init__.py  app.py  queries.py
tests/: conftest.py  test_align.py  test_anchor.py  test_anidb.py  test_client.py  test_config.py  test_ingest.py  test_jikan.py  test_ratelimit.py  test_simkl.py  test_tmdb.py  test_tvdb.py
